--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -9,7 +9,7 @@
         "**/.github": true,
     },
     "java.server.launchMode": "Standard",
-    "java.dependency.packagePresentation": "hierarchical",
+    "java.dependency.packagePresentation": "flat",
     "java.project.sourcePaths": [
         "src"
     ],
